[gd_scene load_steps=5 format=3 uid="uid://c28mq84tbpg8i"]

[ext_resource type="Script" path="res://scenes/UI/shop_panel.gd" id="1_bg3ks"]

[sub_resource type="Animation" id="Animation_78ydt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wwfw0"]
resource_name = "toogle"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.03, 1.03), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_envkl"]
_data = {
"RESET": SubResource("Animation_78ydt"),
"toogle": SubResource("Animation_wwfw0")
}

[node name="ShopPanel" type="CanvasLayer"]
layer = 10
script = ExtResource("1_bg3ks")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_envkl")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -119.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(320, 78)
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Undefined"

[node name="DialogLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Undefined"

[node name="AnswersContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AnswersContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.509804, 0.509804, 1)
layout_mode = 2
text = "Buy"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/AnswersContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
